# virtual-qa40x-rs

./: .gitignore  Cargo.toml  GADGET.md  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/vqa40x-cli/: Cargo.toml
crates/vqa40x-cli/src/: config.rs  main.rs
crates/vqa40x-core/: Cargo.toml
crates/vqa40x-core/src/: analyzer.rs  backend.rs  bootloader.rs  calpage.rs  identity.rs  lib.rs  options.rs  registry.rs  rng.rs  sim.rs
crates/vqa40x-gadget/: Cargo.toml
crates/vqa40x-gadget/src/: descriptors.rs  main.rs  runner.rs
crates/vqa40x-usbip/: Cargo.toml
crates/vqa40x-usbip/src/: lib.rs  proto.rs
crates/vqa40x-usbip/tests/: e2e.rs
examples/: devices.json
tools/: auto-attach.ps1  extract_calpage.py  gadget-setup.sh  gadget-teardown.sh
