[package]
name = "vqa40x-core"
description = "Transport-agnostic QA402/QA403 device model: register bus, fake ADC/DAC streaming, calibration page, NXP KBOOT bootloader (fake firmware upgrade)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
